--- a/src/app/componenti/profilo-user/profilo-user.component.css
+++ b/src/app/componenti/profilo-user/profilo-user.component.css
@@ -143,3 +143,81 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+
+.anima-container {
+  display: flex;
+  margin-bottom: 1rem;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.imm-anima {
+  width: 100px;
+  height: 100px;
+  border-radius: 30px;
+}
+
+.div-anima {
+  width: 100px;
+  height: 100px;
+  border-radius: 30px;
+  background-color: #015ede;
+  color: white;
+  font-size: large;
+  font-weight: lighter;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.emozioni-container{
+  display: grid;
+  grid-template-columns: 105px 105px 105px;
+  gap: 10px;
+  max-width: 100%;
+  padding-bottom: 1rem;
+}
+
+.emozione{
+  width: 105px;
+  height: 105px;
+  border-radius: 10px;
+  background-color: #015ede;
+  color: white;
+  font-size: medium;
+  font-weight: lighter;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+
+@media only screen and (max-width: 320px) {
+  .emozioni-container{
+    grid-template-columns: 85px 85px 85px;
+  }
+
+  .emozione{
+    width: 85px;
+    height: 85px;
+    font-size: medium;
+  }
+}
+
+.mat-badge-content {
+  background: #d2b48c;
+  color: white;
+}
+
+.mat-badge-medium.mat-badge-above .mat-badge-content {
+  top: 15px;
+  right: 15px;
+}
+
+@media only screen and (max-width: 425px) {
+  .mat-badge-medium.mat-badge-above .mat-badge-content {
+    top: 5px;
+    right: 5px;
+  }
+}
