--- a/src/app/componenti/profilo-user/profilo-user.component.css
+++ b/src/app/componenti/profilo-user/profilo-user.component.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding-inline: 1rem;
+  padding-bottom: 20px;
 }
 
 .sezione {
@@ -224,9 +225,50 @@
 
 .empty-state-container{
   text-align: center;
+  padding-bottom: 1rem;
 }
 
 .p-empty{
   color: #696969;
   font-size: medium;
+}
+
+
+.comment {
+  padding: 1rem;
+  border-radius: 15px;
+  background-color: white;
+  margin-bottom: 1rem;
+  box-shadow: #64646447 0px 5px 10px 0px;
+  scroll-margin-top: 60px;
+}
+
+.comment-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.comment-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.comment-title {
+  color: gray;
+  margin-bottom: 0;
+}
+
+.comment-location {
+  color: gray;
+  font-weight: lighter;
+}
+
+.comment-desc {
+  font-weight: 550;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-size: small;
+  overflow-x: initial;
+  white-space: initial;
 }
