fix bug duplica emozioni sul dialog 'aggiungi emozioni' + cambiato 'aggiungi commento' in 'scrivi commento' in luogo + aggiunto il nome user all'interno dei commenti

--- a/src/app/componenti/dashboard/dashboard.component.css
+++ b/src/app/componenti/dashboard/dashboard.component.css
@@ -183,7 +183,7 @@ mat-card-title {
 
 .comment-footer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;;
 }
 
 .comment-title {
