--- a/src/app/componenti/dashboard/dashboard.component.html
+++ b/src/app/componenti/dashboard/dashboard.component.html
@@ -136,6 +136,7 @@
                         </p>
                     </div>
                     <div class="comment-footer">
+                        <p class="comment-location">{{commento.nomeUser}}</p>
                         <p class="comment-location">{{commento.luogo}}</p>
                     </div>
                 </div>
