--- a/src/app/componenti/home/home.component.css
+++ b/src/app/componenti/home/home.component.css
@@ -149,7 +149,8 @@ mat-card-title {
 
 .comment-footer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  flex-direction: row-reverse;
 }
 
 .comment-title {
