convertito info luoghi da stringa a array di oggetti con nome e link

--- a/src/app/componenti/luogo/luogo.component.css
+++ b/src/app/componenti/luogo/luogo.component.css
@@ -171,7 +171,7 @@
   background: none;
   padding: 0;
   color: rgb(63, 34, 145);
-  font-size: 14px;
+  font-size: medium;
   margin-top: 1rem;
   text-decoration: underline;
   display: flex;
