--- a/src/app/componenti/luogo/luogo.component.html
+++ b/src/app/componenti/luogo/luogo.component.html
@@ -50,7 +50,9 @@
             <div class="titolo-container">
                 <h4 class=" sottosezione">Info Utili</h4>
                 <ng-container *ngFor="let info of luogo.info">
-                    <button class="link-utile" (click)="navigaLink(info['link'])"><svg-icon src="assets/Icons/exit_to_app.svg"></svg-icon>  {{info['nome']}}</button>
+                    <div>
+                        <button class="link-utile" (click)="navigaLink(info['link'])"><svg-icon src="assets/Icons/exit_to_app.svg"></svg-icon>  {{info['nome']}}</button>
+                    </div>
             
                 </ng-container>
             </div>
